--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html>
 
+    <head>
+        <link href="Main.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet">
+    </head>
+
+    <body>
+        <div class="MainTitle">
+            BitBite
+        </div>
+        <div class="CryptoDef">
+            What is Crypto Currency?
+        </div>
+
+    </body>
+
+</html>
