Added 'What is Crypto Currency' Button

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <div class="MainTitle">
             BitBite
         </div>
-        <div class="CryptoDef">
-            What is Crypto Currency?
+        <div class="CryptoInfo">
+            <button class ="CryptoButton">What is Crypto Currency?</button>
         </div>
 
     </body>
