Added Crypto Icons
HTML code for crypto icons

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <div class="CryptoInfo">
             <button class ="CryptoButton">What is Crypto Currency?</button>
         </div>
+        <img src="BitCoin.png" class="button1">
+        <img src="Ethereum.png" class="button2">
+        <img src="Ripple.png" class="button3">
 
     </body>
 
