Added lorem ipsum for ripple and bitcoin

--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
             <button class ="CryptoButton">What is Crypto Currency?</button>
         </div>
         <img src="BitCoin.png" class="button1">
+        <p class="bitcoin">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et arcu vel dui rutrum
+            tincidunt. Pellentesque id tortor at urna aliquet placerat. Sed nec tristique.</p>
         <img src="Ethereum.png" class="button2">
         <img src="Ripple.png" class="button3">
+        <p class="ripple">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et arcu vel dui rutrum
+            tincidunt. Pellentesque id tortor at urna aliquet placerat. Sed nec tristique.</p>
 
     </body>
 
