--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <p class="bitcoin">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et arcu vel dui rutrum
             tincidunt. Pellentesque id tortor at urna aliquet placerat. Sed nec tristique.</p>
         <img src="Ethereum.png" class="button2">
+        <p class="ethereum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et arcu vel dui rutrum
+            tincidunt. Pellentesque id tortor at urna aliquet placerat. Sed nec tristique.</p>
         <img src="Ripple.png" class="button3">
         <p class="ripple">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et arcu vel dui rutrum
             tincidunt. Pellentesque id tortor at urna aliquet placerat. Sed nec tristique.</p>
