--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 
     <head>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
         <link href="Main.css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 
     <body>
@@ -13,16 +15,34 @@
         <div class="CryptoInfo">
             <button class ="CryptoButton">What is Crypto Currency?</button>
         </div>
-        <img src="BitCoin.png" class="button1">
-        <p class="bitcoin">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et arcu vel dui rutrum
-            tincidunt. Pellentesque id tortor at urna aliquet placerat. Sed nec tristique.</p>
-        <img src="Ethereum.png" class="button2">
-        <p class="ethereum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et arcu vel dui rutrum
-            tincidunt. Pellentesque id tortor at urna aliquet placerat. Sed nec tristique.</p>
-        <img src="Ripple.png" class="button3">
-        <p class="ripple">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et arcu vel dui rutrum
-            tincidunt. Pellentesque id tortor at urna aliquet placerat. Sed nec tristique.</p>
+        <div class="container">
+            <div class="col-6" style="float: left;">
+                <img class="img-fluid" src="Bitcoin.png" >
+            </div>
+            <div class="col-12 MMtext" style="float: bottom;">
+                Bitcoin Bitcoin Bitcoin Bitcoin Bitcoin Bitcoin Bitcoin Bitcoin Bitcoin
+            </div>
+        </div>
+        <div class="container">
+            <div class="col-6" style="float: right; padding-top: 16%; padding-bottom: 5%;">
+                <img class="img-fluid" src="Ethereum.png" >
+            </div>
+            <div class="col-12 MMtext">
+                Ethereum Ethereum Ethereum Ethereum Ethereum Ethereum Ethereum Ethereum
+            </div>
+        </div>
+        <div class="container">
+            <div class="col-6" style="float: left;">
+                <img class="img-fluid" src="Ripple.png">
+            </div>
+            <div class="col-12 MMtext">
+                Ripple Ripple Ripple Ripple Ripple Ripple Ripple Ripple Ripple Ripple Ripple
+            </div>
+        </div>
 
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
     </body>
 
 </html>
